--- a/flask_basic/flask_templates/templates/index.html
+++ b/flask_basic/flask_templates/templates/index.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>{{phrase}}</title>
+	<meta charset="utf-8">
+	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css') }}">
+	<script type="text/javascript" src="{{ url_for('static', filename='js/script.js') }}"></script>
 </head>
 <body>
 <h1>{{phrase}}</h1>
-<p>{{times}}</p>
+<h2>{{count}}</h1>
 
+<a href="/two">+2</a>
+<a href="/reset">reset</a>
+
+<p>{{times}}</p>
 {% for x in range(0,times) %}
 <p>{{phrase[::-1]}}</p>
 {% endfor %}
