made better disapearing ninjas, path set through the server function

--- a/flask_basic/disappearing_ninjas/templates/ninja.html
+++ b/flask_basic/disappearing_ninjas/templates/ninja.html
@@ -7,7 +7,8 @@
 </head>
 <body>
 
-<img src="{{defimage}}" width="400" class="ninjas">
+<img src="{{ url_for('static', filename='') }}{{defimage}}" width="400" class="ninjas">
+
 <div class="stuff">
 	{{message}}
 </div>
