did latest: validations form

--- a/flask_basic/dojo_survey/templates/index.html
+++ b/flask_basic/dojo_survey/templates/index.html
@@ -9,8 +9,19 @@
 <div>
 	
 	<form action="/result" method="post">
-		Name <input type="" name="name"><br>
-		City <input type="" name="city"><br>
+		Your Name <input type="" name="name"><br>
+		Dojo Location 
+			<select name="city">
+			  <option value="San Jose">San Jose</option>
+			  <option value="Seatle">Seatle</option>
+			  <option value="Los Angeles">Los Angeles</option>
+			</select><br>
+		Favorite Language 
+			<select name="language">
+			  <option value="Python">Python</option>
+			  <option value="JavaScript">JavaScript</option>
+			  <option value="PHP">PHP</option>
+			</select><br>
 		About <br>
 		<textarea name="text"></textarea><br>
 
