--- a/flask_basic/dojo_survey_wvalidtion/templates/result.html
+++ b/flask_basic/dojo_survey_wvalidtion/templates/result.html
@@ -7,8 +7,9 @@
 <h1>Result</h1>
  <b>Name</b>{{name}}<br>
  <b>City</b> {{city}}<br>
- <b>Language</b> {{language}}<br>
+ <b>Favorite Language</b> {{flanguage}}<br>
  <b>About</b> {{text}}<br>
+
  <a href="/">return back</a>
 </body>
 </html>
