--- a/flask_basic/registration_form/templates/result.html
+++ b/flask_basic/registration_form/templates/result.html
@@ -7,8 +7,8 @@
 <h1>Result</h1>
  <b>Name</b>{{name}}<br>
  <b>City</b> {{city}}<br>
- <b>Language</b> {{language}}<br>
  <b>About</b> {{text}}<br>
+ <b>email</b> {{email}}<br>
  <a href="/">return back</a>
 </body>
 </html>
